--- a/Dom/age_check.html
+++ b/Dom/age_check.html
@@ -19,6 +19,7 @@
 <script>
     function catchValue() {
         let name = document.getElementById("name").value
+        console.log(name)
 
         let p = document.getElementById("p")
         if (name < 18) {
