--- a/Dom/calculator.html
+++ b/Dom/calculator.html
@@ -21,13 +21,40 @@
 <script>
 
 
-
     function add() {
-        // alert(first + second)
-        let first = document.getElementById("first").value
 
-        let second = document.getElementById("second").value
-        let sum = first + second
-        console.log(sum)
+        let first = parseInt(document.getElementById("first").value)
+
+        let second = parseInt(document.getElementById("second").value)
+
+
+        alert(first + second)
+    }
+    function subtract() {
+
+        let first = parseInt(document.getElementById("first").value)
+
+        let second = parseInt(document.getElementById("second").value)
+
+
+        alert(first - second)
+    }
+    function multiply() {
+
+        let first = parseInt(document.getElementById("first").value)
+
+        let second = parseInt(document.getElementById("second").value)
+
+
+        alert(first * second)
+    }
+    function divide() {
+
+        let first = parseInt(document.getElementById("first").value)
+
+        let second = parseInt(document.getElementById("second").value)
+
+
+        alert(first / second)
     }
 </script>
